--- a/Factory/Views/Home/index.cshtml
+++ b/Factory/Views/Home/index.cshtml
@@ -1,3 +1,36 @@
 @{
   Layout = "_Layout";
 }
+@using Factory.Models;
+
+<h1>Dr. SillyStringz's Factory</h1>
+<p>Here at the factory of Dr. SillyStringz, our expert team of engineers repairs all kinds of wacky machines!</p>
+<p>Here is a listing of all of our engineers and machines:</p>
+
+<h2>Engineers</h2>
+@if (ViewBag.Engineers.Count == 0)
+{
+  <p>Oh wait, there are no engineers yet. We'd better hire some!</p>
+}
+<ul>
+@foreach (Engineer engineer in ViewBag.Engineers)
+{
+  <li>engineer.Name</li>
+}
+</ul>
+
+<h2>Machines</h2>
+@if (ViewBag.Machines.Count == 0)
+{
+  <p>Oh wait, we don't have any machines yet. We'd better install some!</p>
+}
+<ul>
+@foreach (Machine machine in ViewBag.Machines)
+{
+  <li>machine.Name</li>
+}
+</ul>
+
+
+<p>@Html.ActionLink("Hire engineer", "Create", "Engineers")</p>
+<p>@Html.ActionLink("Install machine", "Create", "Machines")</p>
