--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -1,3 +1,21 @@
 @{
   Layout = "_Layout";
 }
+
+@model Factory.Models.Engineer;
+
+<h1>Hire a new engineer</h1>
+
+@using (Html.BeginForm())
+{
+  @Html.LabelFor(model => model.Name);
+  @Html.TextBoxFor(model => model.Name);
+  <br>
+  @Html.LabelFor(model => model.EmploymentDate);
+  @Html.EditorFor(model => model.EmploymentDate, new { htmlAttributes = new { type="date" }});
+  <br>
+  <input type="submit" value="Hire engineer" class="btn btn-primary"/>
+}
+<br>
+<p>@Html.ActionLink("Back to engineers", "Index")<br>
+@Html.ActionLink("Back to home", "Index", "Home")</p>
