--- a/Factory/Views/Home/index.cshtml
+++ b/Factory/Views/Home/index.cshtml
@@ -15,7 +15,7 @@
 <ul>
 @foreach (Engineer engineer in ViewBag.Engineers)
 {
-  <li>engineer.Name</li>
+  <li>@Html.ActionLink(engineer.Name, "Details", "Engineers")</li>
 }
 </ul>
 
@@ -27,10 +27,9 @@
 <ul>
 @foreach (Machine machine in ViewBag.Machines)
 {
-  <li>machine.Name</li>
+  <li>@Html.ActionLink(machine.Name, "Details", "Machines")</li>
 }
 </ul>
-
-
-<p>@Html.ActionLink("Hire engineer", "Create", "Engineers")</p>
-<p>@Html.ActionLink("Install machine", "Create", "Machines")</p>
+<br>
+<p>@Html.ActionLink("Hire engineer", "Create", "Engineers")<br>
+@Html.ActionLink("Install machine", "Create", "Machines")</p>
