--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -1,3 +1,24 @@
 @{
   Layout = "_Layout";
 }
+
+@model Factory.Models.Machine;
+
+<h1>Install a new machine</h1>
+
+@using (Html.BeginForm())
+{
+  @Html.LabelFor(model => model.Name);
+  @Html.TextBoxFor(model => model.Name);
+  <br>
+  @Html.LabelFor(model => model.Year);
+  @Html.TextBoxFor(model => model.Year);
+  <br>
+  @Html.LabelFor(model => model.InstallationDate);
+  @Html.EditorFor(model => model.InstallationDate, new { htmlAttributes = new { type="date" }});
+  <br>
+  <input type="submit" value="Install machine" class="btn btn-primary"/>
+}
+<br>
+<p>@Html.ActionLink("Back to machines", "Index")<br>
+@Html.ActionLink("Back to home", "Index", "Home")</p>
