--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -1,3 +1,21 @@
 @{
   Layout = "_Layout";
 }
+@using Factory.Models;
+@using System.Collections.Generic;
+@model List<Factory.Models.Machine>;
+
+<h1>Machines</h1>
+@if (Model.Count == 0)
+{
+  <p>Oh wait, we don't have any machines yet. We'd better install some!</p>
+}
+<ul>
+@foreach (Machine machine in Model)
+{
+  <li>@Html.ActionLink(machine.Name, "Details")</li>
+}
+</ul>
+<br>
+<p>@Html.ActionLink("Install machine", "Create")<br>
+@Html.ActionLink("Back to home", "Index", "Home")</p>
