--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -13,7 +13,7 @@
 <ul>
 @foreach (Engineer engineer in Model)
 {
-  <li>@Html.ActionLink(engineer.Name, "Details")</li>
+  <li>@Html.ActionLink(engineer.Name, "Details", new { id = engineer.EngineerId })</li>
 }
 </ul>
 <br>
