--- a/Factory/Views/Engineers/AddMachine.cshtml
+++ b/Factory/Views/Engineers/AddMachine.cshtml
@@ -1,3 +1,15 @@
 @{
   Layout = "_Layout";
 }
+
+@model Factory.Models.Engineer;
+
+<h1>License repair of a new machine</h1>
+
+@using (Html.BeginForm())
+{
+  <p>Select a machine to be licensed to an engineer</p>
+  @Html.HiddenFor(model => model.EngineerId)
+  @Html.DropDownList("MachineId");
+  <input type="submit" class="btn btn-default" />
+}
