--- a/Factory/Views/Machines/AddEngineer.cshtml
+++ b/Factory/Views/Machines/AddEngineer.cshtml
@@ -1,3 +1,14 @@
 @{
   Layout = "_Layout";
 }
+
+@model Factory.Models.Machine;
+
+<h1>License repair by a new engineer</h1>
+
+@using (Html.BeginForm())
+{
+  <p>Select an engineer to license</p>
+  @Html.DropDownList("EngineerId");
+  <input type="submit" class="btn btn-default" />
+}
