--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -32,5 +32,6 @@ else
 </ul>
 <br>
 <p>@Html.ActionLink("Add machine license", "AddMachine", new { id = Model.EngineerId })<br>
+@Html.ActionLink("Fire engineer", "Delete", new { id = Model.EngineerId })<br>
 @Html.ActionLink("Back to engineers", "Index")<br>
 @Html.ActionLink("Back to home", "Index", "Home")</p>
