--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name);
-  @Html.TextBoxFor(model => model.Name);
+  @Html.EditorFor(model => model.Name);
   <br>
   @Html.LabelFor(model => model.EmploymentDate);
   @Html.EditorFor(model => model.EmploymentDate, new { htmlAttributes = new { type="date" }});
