--- a/Factory/Views/Machines/Create.cshtml
+++ b/Factory/Views/Machines/Create.cshtml
@@ -9,10 +9,10 @@
 @using (Html.BeginForm())
 {
   @Html.LabelFor(model => model.Name);
-  @Html.TextBoxFor(model => model.Name);
+  @Html.EditorFor(model => model.Name);
   <br>
   @Html.LabelFor(model => model.Year);
-  @Html.TextBoxFor(model => model.Year);
+  @Html.EditorFor(model => model.Year);
   <br>
   @Html.LabelFor(model => model.InstallationDate);
   @Html.EditorFor(model => model.InstallationDate, new { htmlAttributes = new { type="date" }});
